--- a/BarAngel/src/main/res/layout/fragment_main_bar.xml
+++ b/BarAngel/src/main/res/layout/fragment_main_bar.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$DummySectionFragment">
+    tools:context=".MainActivity$BarSectionFragment">
 
     <TextView
         android:id="@+id/section_label"
@@ -14,4 +14,3 @@
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
-<!-- From: file:/home/mlynch/Dropbox/work/code/BarAngelProject/BarAngel/src/main/res/layout/fragment_main_dummy.xml -->
