--- a/BarAngel/src/main/res/layout/fragment_main_beer.xml
+++ b/BarAngel/src/main/res/layout/fragment_main_beer.xml
@@ -6,12 +6,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$DummySectionFragment">
+    tools:context=".MainActivity$BeerSectionFragment">
 
     <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/PickBeer"
+        android:id="@+id/textView"
+        android:layout_alignTop="@+id/section_label"
+        android:layout_toRightOf="@+id/section_label" />
+
 </RelativeLayout>
-<!-- From: file:/home/mlynch/Dropbox/work/code/BarAngelProject/BarAngel/src/main/res/layout/fragment_main_dummy.xml -->
