--- a/BarAngel/src/main/res/layout/fragment_main_bar.xml
+++ b/BarAngel/src/main/res/layout/fragment_main_bar.xml
@@ -13,4 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@id/chooseBar"
+        android:layout_below="@+id/section_label"
+        android:layout_toRightOf="@+id/section_label"
+        android:choiceMode="singleChoice"
+        tools:listitem="@android:layout/simple_list_item_single_choice" />
+
 </RelativeLayout>
