Tried to make changes to the Bar section to add a list view of bars. Having difficulty getting the list view to display. The list should be a single click which will feed into the beer list on the second fragment.

--- a/BarAngel/src/main/res/layout/fragment_main_bar.xml
+++ b/BarAngel/src/main/res/layout/fragment_main_bar.xml
@@ -20,6 +20,7 @@
         android:layout_below="@+id/section_label"
         android:layout_toRightOf="@+id/section_label"
         android:choiceMode="singleChoice"
-        tools:listitem="@android:layout/simple_list_item_single_choice" />
+        tools:listitem="@android:layout/simple_list_item_single_choice"
+        android:clickable="true" />
 
 </RelativeLayout>
