--- a/BarAngel/src/main/res/layout/fragment_main_bar.xml
+++ b/BarAngel/src/main/res/layout/fragment_main_bar.xml
@@ -13,4 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/section_label"
+        android:layout_alignLeft="@+id/section_label" />
+
 </RelativeLayout>
