--- a/BarAngel/src/main/res/layout/fragment_main_bar.xml
+++ b/BarAngel/src/main/res/layout/fragment_main_bar.xml
@@ -16,7 +16,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:id="@+id/barListView"
         android:layout_below="@+id/section_label"
         android:layout_alignLeft="@+id/section_label" />
 
