--- a/BarAngel/src/main/res/layout/activity_main.xml
+++ b/BarAngel/src/main/res/layout/activity_main.xml
@@ -1,9 +1,14 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <!-- tools:context=".MainActivity"> -->
 
     <!--
     This title strip will display the currently visible page title, as well as the page
@@ -15,9 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#33b5e5"
+        android:background="#ccc"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
         android:textColor="#fff" />
-
 </android.support.v4.view.ViewPager>
+</LinearLayout>
